<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DestinguirParOuImpar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="14dp"
        android:gravity="center|top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewDescrição"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_par_impar"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="38dp" />

        <ImageView
            android:id="@+id/imageViewParouImpar"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/par_ou_impar" />

        <EditText
            android:id="@+id/editTextValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:digits="0123456789"
            android:inputType="textPersonName"
            android:text=""
            tools:layout_editor_absoluteX="105dp"
            tools:layout_editor_absoluteY="324dp" />

        <TextView
            android:id="@+id/textViewAviso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/digite_apenas_n_meros_inteiros"
            tools:layout_editor_absoluteX="174dp"
            tools:layout_editor_absoluteY="388dp" />

        <Button
            android:id="@+id/buttonClicar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/aperte_aqui"
            tools:ignore="HardcodedText"
            tools:layout_editor_absoluteX="161dp"
            tools:layout_editor_absoluteY="440dp" />

        <TextView
            android:id="@+id/textViewResultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:text="@string/resultado"
            android:textSize="40sp"
            tools:layout_editor_absoluteX="172dp"
            tools:layout_editor_absoluteY="588dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>